kubernetes/apps/base/monica/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monica
  namespace: monica
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`crm.heimelska.co.uk`)
      kind: Rule
      services:
        - name: monica
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-users
          namespace: traefik
  tls:
    secretName: monica-tls
